# mlops_zoomcamp

01-intro/: duration_prediction.ipynb  homework_1.ipynb  main.py  pyproject.toml
02-experiment-tracking/: homework_2.ipynb  hpo.py  main.py  pyproject.toml  register_model.py  train.py
02-experiment-tracking/mlruns/0/: meta.yaml
03-orchestration/: .gitignore  docker-compose.yaml  duration_prediction.py  duration_prediction_pipeline.py  homework_3.ipynb  mlflow.db  pyproject.toml
03-orchestration/config/: airflow.cfg
03-orchestration/dags/: duration_prediction.py  duration_prediction_training.py
03-orchestration/mlflow/: mlflow.db
03-orchestration/mlruns/1/82099ea986994069b3a01a12674022cc/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
03-orchestration/mlruns_artifacts/1/09ea2d53d0004fbd8fa6fdb64537f7d1/artifacts/model/: MLmodel  conda.yaml
03-orchestration/mlruns_artifacts/1/21a5912d8f7146f59e59d8612fab0169/artifacts/model/: MLmodel
03-orchestration/mlruns_artifacts/1/ba786e67690d49bc8ad9ba1c8b77519d/artifacts/model/: MLmodel
03-orchestration/mlruns_artifacts/1/cae81828b97e44e4b1c4a9d8609799ba/artifacts/model/: MLmodel
04-deployment/: Dockerfile  homework_4.ipynb  pipeline.ipynb  pipeline.py  pyproject.toml
05-monitoring/: .gitignore  homework_5.ipynb  pyproject.toml
06-best-practices/: .gitignore  Dockerfile  README.md  batch.py  docker-compose.yml  integration_test.py  pyproject.toml  requirements.txt
06-best-practices/tests/: test_batch.py
(+3 files in other folders)
