[project]
name = "02-experiment-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "hyperopt>=0.2.7",
    "mlflow>=2.22.1",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
