[project]
name = "04-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
