[project]
name = "06-best-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.5.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "s3fs>=2025.5.1",
    "scikit-learn==1.5.0",
]
